changed tick tack toe to Opp

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h2>Current Player : </h2>
+    <h2>Current Player : <span id="currentPlayer"></span></h2>
   </header>
   <main>
     <section id="board">
